--- a/package.json
+++ b/package.json
@@ -24,15 +24,12 @@
     "url": "https://github.com/spinico/vue-gettext-cli.git"
   },
   "dependencies": {
-    "easygettext": "^2.7.0",
+    "easygettext": "^2.10.0",
     "yargs": "^13.2.0",
     "chalk": "^2.4.2",
     "cross-spawn": "^6.0.5",
-    "glob": "^7.1.3"
+    "glob": "^7.1.3",
+    "kind-of": "^6.0.3"
   },
-  "resolutions": {
-    "**/**/lodash": "^4.17.13",
-    "**/**/acorn": "^5.7.4",
-    "**/**/kind-of": "^6.0.3"
-  }
+  "resolutions": {}
 }
